--- a/webapp/app/views/karaoke/index.haml
+++ b/webapp/app/views/karaoke/index.haml
@@ -1,6 +1,7 @@
 %html
   %head
+    %title MPlayer Karaoke - V0.2
     %object#ktop
   %frameset{:rows=>'67%,33%'}
     %frame{:src=>"monitor", :name=>'monitor'}
-    %frame{:src=>"search", :name=>'search'}
+    %frame{:src=>"search",  :name=>'search'}
