--- a/webapp/app/views/karaoke/monitor.haml
+++ b/webapp/app/views/karaoke/monitor.haml
@@ -21,11 +21,15 @@
       :border-bottom 1px solid
     tr
       :border-bottom 1px solid
+    .l_direct
+    .l_indirect
+      :color #338f42
+      :font-style italic
 
 - if csong = @playlist.current_song
   = render(:partial=>'cursong', :object=>csong)
 
-= render(:partial=>'toolbar')
+= render(:partial=>'toolbar', :object=>{:role=>'monitor'})
 
 %table
   %tr
@@ -41,21 +45,8 @@
   - curplay = @playlist.curplay
   - @playlist.songs.each do |arec|
     - rtype = (rcount == curplay) ? "#ccccff" : ""
-    - author = arec.lyric ? arec.lyric.author : ""
     %tr{:id=>"row_#{rcount}",:bgcolor=>rtype}
-      %td= arec.id
-      %td= link_to(arec.song, {:action=>:search, :id=>arec.id, :item=>rcount, :ptn=>arec.song}, :target=>'search')
-      %td= link_to(arec.artist, {:action=>:search, :ptn=>arec.artist}, :target=>'search')
-      %td= link_to(author, {:action=>:search, :ptn=>"author=#{author}"}, :target=>'search')
-      %td= "&nbsp;" + "*****"[0, arec.rate.to_i]
-      %td= arec.tag ? link_to(arec.tag, :action=>:search, :ptn=>"tag=#{arec.tag}") : "&nbsp;"
-      %td= arec.lastplayed ? Time.at(arec.lastplayed).strftime("%m/%d/%y") : "&nbsp;"
-      - lyrics = arec.lyrics
-      - if arec.lyric
-        - unless lyrics
-          - lyrics = arec.lyric.abcontent || ""
-        - lyrics += " " + link_to("[...]", {:action=>:lyrics, :id=>arec.id}, :target=>'lyrics')
-      %td= lyrics || "&nbsp;"
+      = render(:partial=>'song', :object=>arec, :locals=>{:rcount=>rcount, :role=>:monitor})
     - rcount += 1
 %script
   $("row_#{curplay}").scrollTo();
