--- a/webapp/app/views/karaoke/search.haml
+++ b/webapp/app/views/karaoke/search.haml
@@ -1,4 +1,23 @@
-= render(:partial=>'toolbar')
+- content_for "page_style" do
+  :sass
+    table
+      :border 3px solid #cccccc
+    th
+      :background-color #cccccc
+    td
+      :border-bottom 1px dotted #ccccff
+      :border-left   1px solid #ccccff
+      :padding 0 3px
+    tr
+      :border-bottom 1px solid
+    .l_direct
+    .l_indirect
+      :color #338f42
+      :font-style italic
+    body
+      :background-color #ffcc88
+
+= render(:partial=>'toolbar', :object=>{:role=>'search'})
 - if @cursong
   = render(:partial=>'cursong', :object=>@cursong)
 
@@ -14,7 +33,7 @@
   <b>Tag</b>:
   = select_tag("tag", options_for_select(['-']  + @tags), :onchange=>'form.submit();')
 
-- if true
+- if session[:admin]
   %form{:action=>'/karaoke/cli'}
     <b>Evaluate</b>:
     %input{:type=>'hidden', :name=>'cid', :value=>(@cursong ? @cursong.id : 0)}
@@ -22,22 +41,16 @@
 
 %form{:action=>'mqueue', :ptn2=>@ptn}
   %input{:type=>'hidden', :name=>'ptn', :value=>@ptn}
-  | <b>Clean</b>:
+  %b Reset List:
   %input{:type=>'checkbox', :name=>'clean'}
-  | <b>All:</b>
-  %input{:type=>'checkbox', :name=>'all'}
-  %button Add
+  %input{:type=>:submit, :name=>'submit', :value=>'Add'}
+  %input{:type=>:submit, :name=>'submit', :value=>'Add All'}
   %table
+    - rcount = 0
     - @records.each do |arec|
       %tr
         %td
           %input{:type=>'checkbox', :name=>"rec_#{arec.id}", :value=>1}
-        %td= link_to_remote(arec.id, :url=>{:action=>:queue, :id=>arec.id})
-        %td= arec.song
-        %td= arec.artist
-        %td= "%03d%s" % [arec.size, arec.ksel]
-        %td= "*****"[0, arec.rate.to_i]
-        %td= arec.tag
-        %td= arec.lastplayed ? Time.at(arec.lastplayed).strftime("%m/%d/%y") : ""
-        %td= arec.lyrics || "..."
+        = render(:partial=>'song', :object=>arec, :locals=>{:rcount=>rcount, :role=>:search})
+        - rcount += 1
 
