--- a/webapp/app/views/karaoke/_cursong.haml
+++ b/webapp/app/views/karaoke/_cursong.haml
@@ -1,4 +1,5 @@
-%p
+.cursong
+  <b>ID</b>: #{cursong.id}
   | <b>Song</b>: #{cursong.song}
   | <b>Artist</b>: #{cursong.artist}
   | <b>Rating</b>: #{cursong.rate}
