--- a/webapp/app/views/karaoke/_song.haml
+++ b/webapp/app/views/karaoke/_song.haml
@@ -1,9 +1,9 @@
 - author = song.lyric ? song.lyric.author : ""
 - if role == :search
-  %td.playnow= link_to(song.id, {:action=>:rcommand, :id=>:play_now, :item=>song.id}, {:title=>"Play '#{song.song}'", :target=>'monitor', :confirm=>"OK to clear list and replaced with '#{song.song}'?"})
+  %td.playnow= link_to(song.id, {:action=>:command, :id=>:play_now, :item=>song.id}, {:title=>"Play '#{song.song}'", :target=>'monitor', :confirm=>"OK to clear list and replaced with '#{song.song}'?"})
   %td.playqueue= link_to(song.song, {:action=>:queue, :id=>song.id}, {:title=>"Queue #{song.song}", :target=>'monitor'})
 - else
-  %td.playnow= link_to(song.id, {:action=>:rcommand, :id=>:item, :item=>song.id}, {:title=>"Play #{song.song}"})
+  %td.playnow= link_to(song.id, {:action=>:command, :id=>:item, :item=>song.id}, {:title=>"Play #{song.song}"})
   %td.playnow= link_to(song.song, {:action=>:search, :id=>song.id, :item=>rcount, :ptn=>song.song}, :target=>'search')
 %td= link_to(song.artist, {:action=>:search, :ptn=>song.artist}, :target=>'search')
 %td= link_to(author, {:action=>:search, :ptn=>"author=#{author}"}, :target=>'search')
