--- a/webapp/app/views/karaoke/search.haml
+++ b/webapp/app/views/karaoke/search.haml
@@ -13,8 +13,6 @@
 
 #float_tool
   %form{:action=>'/karaoke/search'}
-    %input{:type=>'text', :name=>'ptn', :value=>@ptn}
-    %button Search
     <b>Songs</b>:
     = select_tag("alphabet", options_for_select(['', '0'] + ('A'..'Z').to_a), :onchange=>'form.submit();')
     <b>Artist</b>:
@@ -23,6 +21,8 @@
     = select_tag("author", options_for_select([''] + Lyric.all_authors), :onchange=>'form.submit();')
     <b>Tag</b>:
     = select_tag("tag", options_for_select(['']  + Song.all_tags), :onchange=>'form.submit();')
+    %input{:type=>'text', :name=>'ptn', :size=>40, :value=>@ptn}
+    %button Search
 
   - if session[:admin]
     %form{:action=>'/karaoke/cli'}
