--- a/webapp/app/views/karaoke/lyric_content.haml
+++ b/webapp/app/views/karaoke/lyric_content.haml
@@ -3,11 +3,26 @@
     .hozlist
       li
         :line-height 1.5em
+    .artlink
+      :color #cc0
+      :font-size 0.8em
+      a
+        :color #48c
+    body
+      :background-color #111
+    a
+      :color #ee8
+    a:hover
+      :text-decoration underline
+      :color red
 
-%ul
-  - fc = ""
-  - Lyric.unique_songs.each do |arec|
-    - if arec.name[0,1] != fc
-      %hr/
-      - fc = arec.name[0,1]
-    %li= link_to(arec.name, :action=>:lyrics, :lid=>arec.id)
+- fc = ""
+- Lyric.unique_songs.each do |arec|
+  - next if (arec.songs.size <= 0)
+  - if arec.name[0,1] != fc
+    %hr/
+    - fc = arec.name[0,1]
+  %br/
+  = link_to(arec.name, {:action=>:lyrics, :lid=>arec.id}, {:target=>'lyrics'})
+  %span.artlink
+    = ": " + arec.songs.map {|s| link_to(s.artist, {:action=>:queue, :id=>s.id}, {:target=>'monitor'})}.join(" | ")
